# IDE_Agent

./: ._IDE_Expert_Agent_Blueprint.docx  ._Portable_Python_LLM_Setup_Guide.docx  ._~$E_Expert_Agent_Blueprint.docx  .gitignore  COMMANDS_GUIDE.md  IDE_Expert_Agent_Blueprint.docx  Portable_Python_LLM_Setup_Guide.docx  README.md  blueprint_extract.txt  feature_roadmap.md  ingest.py  pyproject.toml  requirements.txt  start_nexus.bat  start_nexus.sh  stop_nexus.bat  stop_nexus.sh  ~$E_Expert_Agent_Blueprint.docx
app/: cli.py
data/docs/: ._ScreenshotSummary.docx  ScreenshotSummary.docx
nexusai/: __init__.py  cli.py  config.py  ingest.py  pr_generator.py  setup_wizard.py
nexusai/plugins/: hello.py
plugins/: hello.py
pr_generator/: generator.py
