[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-term"
version = "3.1.0"
description = "Offline Expert Agent — local RAG, agent mode, plugins, privacy-first"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sahith Reddy Thummala", email = "tsahith59@gmail.com" }
]
keywords = ["ai", "rag", "offline", "llm", "ollama", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]

dependencies = [
    "langchain-ollama>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "semantic-router>=0.0.72",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "rich>=13.7.0",
    "ddgs>=6.0.0",
    "pyperclip>=1.8.2",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "docx2txt>=0.8",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage   = "https://github.com/Sahith59/IDE_Agent"
Repository = "https://github.com/Sahith59/IDE_Agent"
Issues     = "https://github.com/Sahith59/IDE_Agent/issues"

[project.scripts]
nexus        = "nexusai.cli:main"
nexus-ingest = "nexusai.ingest:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["nexusai*"]

[tool.setuptools.package-data]
nexusai = ["plugins/*.py"]
